--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sctx.app.android.recycleviewmodel">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -18,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.RecycleViewActivity" />
+        <activity android:name=".activity.FormActivity" />
     </application>
 
 </manifest>
